# kokoro-onnx

./: .gitignore  BUILDING.md  CONTRIBUTE.md  README.md  app.py  main.py  pyproject.toml  tokenizer.py  voices.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: check.yml  ci.yml  fetch_voices.yml  publish-to-pypi.yml  test.yml
examples/: all_voices.py  app.py  chinese.py  custom_session.py  english.py  french.py  gradio_web.py  hindi.py  italian.py  japanese.py  japanse.py  language.py  languages.py  play.py  podcast.py  portuguese.py  save.py  spanish.py  usage.py  voices.py  with_batching.py  with_blending.py  with_cuda.py  with_espeak_data.py  with_espeak_lib.py  with_gpu.py  with_language.py  with_languages.py  with_log.py  with_misaki.py  with_phonemes.py  with_provider.py  with_quant.py  with_session.py  with_stream.py  with_stream_save.py  with_voice.py  with_voices.py
models/: .gitkeep
scripts/: export.py  fetch_voices.py
src/kokoro_onnx/: __init__.py  config.py  log.py  tokenizer.py  trim.py  voices.py
