[project]
name = "kokoro-onnx"
version = "0.3.9"
description = "TTS with kokoro and onnx runtime"
readme = "README.md"
authors = [
    { name = "thewh1teagle", email = "61390950+thewh1teagle@users.noreply.github.com" },
]
requires-python = ">=3.9,<3.13" # librosa -> llvmlite have no support for python > 3.12. 
dependencies = [
    "onnxruntime>=1.20.1",
    "colorlog>=6.9.0",
    "espeakng-loader>=0.2.4",
    "phonemizer-fork==3.3.1", # TODO: remove once https://github.com/thewh1teagle/espeakng-loader/issues/2 merged
    "librosa>=0.10.2.post1", # TODO: get rid of librosa with something that works on more versions and platforms.
    "numba>=0.60.0", # librosa -> numba have issues with python 3.12
    "numpy>=2.0.2",
]

[project.urls]
Homepage = "https://github.com/thewh1teagle/kokoro-onnx"
Repository = "https://github.com/thewh1teagle/kokoro-onnx"
Issues = "https://github.com/thewh1teagle/kokoro-onnx/issues"



[project.optional-dependencies]
# Windows/Linux GPU feature
# Install with kokoro-onnx[gpu]
gpu = [
    # onnxruntime-gpu is not available on Linux ARM or macOS
    "onnxruntime-gpu>=1.20.1; platform_machine == 'x86_64' and sys_platform != 'darwin'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff>=0.8.6", "sounddevice>=0.5.1", "soundfile>=0.13.0"]
